@@ -27,6 +27,11 @@ Version 15.UNKNOWN (master)
   the mnemonic. Ampersands caused problems with searches in Weblate
   (https://github.com/WeblateOrg/weblate/issues/1861)
 
+Bug fixes:
+
+* Picking up a piece from board in setup mode sometimes switched piece
+  instances in game variants with multiple instances per piece.
+
 
 Version 15.0.UNKNOWN (v15-fixes)
 ================================
